--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       <ul id="tasks">
         <li>Task 1</li>
         <li>Task 2</li>
+        <li>Task 3</li>
         <li>Task 4</li>
+        <li>Task 5</li>
+        <li>Task 6</li>
       </ul>
     </div>
 
